--- a/css/fotos.css
+++ b/css/fotos.css
@@ -38,7 +38,7 @@ ul#album-fotos li:hover {
 }
 
 ul#album-fotos li#foto01 {
-    background: url('../_imagens/galeria-01.jpg') no-repeat;
+    background: url('../imagens/galeria-01.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
@@ -51,7 +51,7 @@ ul#album-fotos li#foto01 {
     }
 
 ul#album-fotos li#foto02 {
-    background: url('../_imagens/galeria-02.jpg') no-repeat;
+    background: url('../imagens/galeria-02.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
@@ -64,7 +64,7 @@ ul#album-fotos li#foto02 {
 }
 
 ul#album-fotos li#foto03 {
-    background: url('../_imagens/galeria-03.jpg') no-repeat;
+    background: url('../imagens/galeria-03.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
@@ -77,7 +77,7 @@ ul#album-fotos li#foto03 {
 }
 
 ul#album-fotos li#foto04 {
-    background: url('../_imagens/galeria-04.jpg') no-repeat;
+    background: url('../imagens/galeria-04.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
@@ -90,7 +90,7 @@ ul#album-fotos li#foto04 {
 }
 
 ul#album-fotos li#foto05 {
-    background: url('../_imagens/galeria-05.jpg') no-repeat;
+    background: url('../imagens/galeria-05.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
@@ -103,7 +103,7 @@ ul#album-fotos li#foto05 {
 }
 
 ul#album-fotos li#foto06 {
-    background: url('../_imagens/galeria-06.jpg') no-repeat;
+    background: url('../imagens/galeria-06.jpg') no-repeat;
     background-position: 50% 50%;
     background-size: 400px 400px;
     background-color: #ffffff;
